objects/APTS_Quotation_External_Hyperlink__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Access_level__c</fullName>
        <label>Access Level</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Attachment_ID__c</fullName>
        <externalId>true</externalId>
        <label>Attachment ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Attachment_Merge_ID__c</fullName>
        <label>Attachment Merge ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>BOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUDG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cart Export</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CQT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DWG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LINK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LQT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RQST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SQT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ST&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TQT</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Current_Session_ID__c</fullName>
        <description>ActiveDocs: Stores the current session ID at the time of record creation during wizard mode</description>
        <inlineHelpText>ActiveDocs: Stores the current session ID at the time of record creation during wizard mode</inlineHelpText>
        <label>Current Session ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_DocGen_Redirection_URL__c</fullName>
        <description>The redirection URL of the document generation page to which ActiveDocs wizard will eventually redirect to</description>
        <inlineHelpText>The redirection URL of the document generation page to which ActiveDocs wizard will eventually redirect to</inlineHelpText>
        <label>DocGen Redirection URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>APTS_Document_Format__c</fullName>
        <label>Document Format</label>
        <picklist>
            <picklistValues>
                <fullName>DOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOCX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PNG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPEG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XLSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSV</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Document_ID__c</fullName>
        <description>ActiveDocs Document ID that shall be populated once the Status is &apos;Generated&apos;</description>
        <inlineHelpText>ActiveDocs Document ID that shall be populated once the Status is &apos;Generated&apos;</inlineHelpText>
        <label>Document ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Document_Size__c</fullName>
        <label>Document Size</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Hyperlink_Label__c</fullName>
        <label>Hyperlink Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Integration_Transaction_Record_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field holds the reference to the integration transaction record which will have the request and response jsons and the status of the callout.</description>
        <inlineHelpText>This field holds the reference to the integration transaction record which will have the request and response jsons and the status of the callout.</inlineHelpText>
        <label>Integration Transaction Record Id</label>
        <referenceTo>APTS_ABB_Integration_Transaction__c</referenceTo>
        <relationshipLabel>Quotation External Hyperlinks</relationshipLabel>
        <relationshipName>Quotation_External_Hyperlinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_IsAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAttachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_IsHyperlink__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsHyperlink</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_IsMerge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsMerge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_IsPreview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPreview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_From_External_Configurator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_From_External_Configurator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Selected_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if hyperlink is selected as attachment while generating.</description>
        <label>Is Selected Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Selected_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if hyperlink is selected as link while generating.</description>
        <label>Is Selected Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Job_ID__c</fullName>
        <externalId>true</externalId>
        <label>Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Line Item</label>
        <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
        <relationshipLabel>Quotation External Hyperlinks</relationshipLabel>
        <relationshipName>Quotation_External_Hyperlinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Masked_Hyperlinks__c</fullName>
        <label>Masked Hyperlinks</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>APTS_Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Line Item</label>
        <referenceTo>Apttus_Config2__OrderLineItem__c</referenceTo>
        <relationshipLabel>Quotation External Hyperlinks</relationshipLabel>
        <relationshipName>Quotation_External_Hyperlinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quotation Line Item</label>
        <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
        <relationshipLabel>Quotation External Hyperlinks</relationshipLabel>
        <relationshipName>Quotation_External_Hyperlinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation_Link__c</fullName>
        <description>Link to Quote</description>
        <formula>APTS_Quotation__r.APTS_Quotation_Number_HyperLink__c</formula>
        <label>Quotation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quotation</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Quotation External Hyperlinks</relationshipLabel>
        <relationshipName>Quotation12</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Source_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source template from which this document/link was generated</description>
        <inlineHelpText>Source template from which this document/link was generated</inlineHelpText>
        <label>Source Template</label>
        <referenceTo>Apttus__APTS_Template__c</referenceTo>
        <relationshipLabel>Quotation External Hyperlinks</relationshipLabel>
        <relationshipName>Quotation_External_Hyperlinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To be Resumed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Link</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Quotation External Hyperlink</label>
    <nameField>
        <displayFormat>EH-{0000000000}</displayFormat>
        <label>Quotation External Hyperlink Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotation External Hyperlinks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>APTS_AccessLevel_Validation</fullName>
        <active>true</active>
        <description>User should not be able to change Access level if user is not the owner of that QEH record.</description>
        <errorConditionFormula>IF( AND(ISCHANGED(APTS_Access_level__c),$User.Id  != OwnerId) , true, false)</errorConditionFormula>
        <errorMessage>This operation is not allowed. Only the owner of the document can change the access level.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APTS_URL_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(OR(BEGINS(APTS_URL__c, &apos;http://&apos;), BEGINS(APTS_URL__c, &apos;https://&apos;)))</errorConditionFormula>
        <errorDisplayField>APTS_URL__c</errorDisplayField>
        <errorMessage>Please check the URL entered and ensure it is entered in the correct format.

Correct formats include https:// OR http:// at the beginning or the URL</errorMessage>
    </validationRules>
</CustomObject>